2006-01-21  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.desktop.in:
	Add GTK category (#328024).

2006-01-19  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Unlock the drive before ejecting.

2006-01-19  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Rebuild the pipeline after every track for now, to fix a crash.

2006-01-19  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.13.3.

2006-01-19  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* data/sound-juicer.schemas.in:
	* src/sj-extractor.c:
	* src/sj-main.c:
	* src/sj-play,c:
	Merge GStreamer 0.10 port from the branch.

2006-01-16  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.13.2.

2006-01-15  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	* src/sj-extractor.c:
	* src/sj-metadata-musicbrainz.c:
	* src/sj-prefs.c:
	* src/sj-structures.c:
	* src/sj-structures.h:
	Add support for the MusicBrainz sortname attribute (Peter Oliver,
	#313354).

2006-01-10  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Protect against a NULL drive object (Marco Barisione, #326346).

2006-01-08  Ross Burton  <ross@burtonini.com>

	* src/sj-metadata-cdtext.c:
	Calculate the track durations.

2006-01-08  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Fix weird whitespace.

2006-01-08  Ross Burton  <ross@burtonini.com>

	* src/sj-metadata-musicbrainz.c:
	Cache the metadata.  This doesn't persist user changes or verify
	for updates, but it's a start.

2006-01-07  Ross Burton  <ross@burtonini.com>

	* src/Makefile.am:
	* src/gconf-bridge.[ch]:
	Add GConf bridge, copied from the libgconf-bridge module.

	* data/sound-juicer.glade:
	* src/sj-main.c:
	* src/sj-prefs.c:
	* src/sound-juicer.h:
	Use gconf-bridge to sync some properties, and the window size.

2006-01-07  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Protect against NULL profiles.

2006-01-07  Ross Burton  <ross@burtonini.com>

	* configure.in: