@@ -1,5 +1,11 @@
 2006-01-21  Ross Burton  <ross@burtonini.com>
 
+	* src/bacon-message-connection.c:
+	* src/bacon-message-connection.h:
+	Update (#327979).
+
+2006-01-21  Ross Burton  <ross@burtonini.com>
+
 	* data/sound-juicer.desktop.in:
 	Add GTK category (#328024).
 
